<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="horizontal">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_MovieSectionHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />


    <LinearLayout
            android:id="@+id/menu_drawable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@id/rv_MovieSectionHolder"
            android:background="@drawable/border_box"
            android:orientation="vertical"
            android:padding="1dp"
            android:visibility="gone">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="@drawable/underline_red"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:padding="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/droid_kuf_"
                    android:gravity="center_vertical"
                    android:text="@string/home"
                    android:textColor="@color/menuItemText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="@drawable/underline_gray"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:padding="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/droid_kuf_"
                    android:gravity="center_vertical"
                    android:text="@string/popular_movie"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="@drawable/underline_gray"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:padding="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/droid_kuf_"
                    android:gravity="center_vertical"
                    android:text="@string/movies"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="@drawable/underline_gray"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:padding="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/droid_kuf_"
                    android:gravity="center_vertical"
                    android:text="@string/series"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="@drawable/underline_gray"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:padding="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/droid_kuf_"
                    android:gravity="center_vertical"
                    android:text="@string/myLib"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>